--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
       .transitions-disabled * {
         transition: none !important;
       }
+
+      html {
+        font-size: 16px; <!-- Sets root em -->
+      }
+
+      @media (max-width: 1024px) { html { font-size: 15px } }
+      @media (max-width:  768px) { html { font-size: 14px } }
     </style>
   </head>
 
