--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
         font-size: 16px; <!-- Sets root em -->
       }
 
+      html,
+      body {
+        height: 100%;
+      }
+
       @media (max-width: 1024px) { html { font-size: 15px } }
       @media (max-width:  768px) { html { font-size: 14px } }
     </style>
